background image not loading bugs

--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
           <img
             class="plants-lover-badge mobile-display-no"
             src="assets/trusted-badge.png"
-            alt="Trusted Seller"
-            class="max-w-full w-56 hidden md:block absolute -top-[90px] -right-[85px] animate-spin"
+            alt=""
           />
           <img
             class="plants-lover-img"
@@ -213,6 +212,33 @@
               variety of fresh.
             </li>
           </ul>
+        </div>
+      </section>
+
+      <section class="latest-deal">
+        <div class="latest-deal-text">
+          <h2 class="latest-deal-title noto-serif-bold-50">
+            <span class="red-banner-title">Latest</span> Deals
+          </h2>
+          <p class="latest-deal-description inter-regular-22">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+        </div>
+        <div class="latest-deal-cards">
+          <div class="latest-deal-card latest-deal-bloom">
+            <h3>60% Off | Bloom Plant</h3>
+            <a href="">Shop Now</a>
+          </div>
+          <div class="latest-deal-card latest-deal-ana">
+            <h3>30% Off | Ana Plant</h3>
+            <a href="">Shop Now</a>
+          </div>
+          <div class="latest-deal-card latest-deal-zabo">
+            <h3>25% Off | Zabo Plant</h3>
+            <a href="">Shop Now</a>
+          </div>
         </div>
       </section>
     </main>
