added responsive join section

--- a/index.html
+++ b/index.html
@@ -242,5 +242,15 @@
         </div>
       </section>
     </main>
+    <section class="join">
+      <h2 class="join-title noto-serif-bold-50">Join the colorful Bunch</h2>
+      <div class="input-box">
+        <input
+          type="email"
+          class="join-email"
+          placeholder="Write email"
+        /><button class="btn-primary btn-sub">Subscribe</button>
+      </div>
+    </section>
   </body>
 </html>
