--- a/index.html
+++ b/index.html
@@ -252,5 +252,38 @@
         /><button class="btn-primary btn-sub">Subscribe</button>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="footer-left">
+        <img src="assets/logo.png" alt="logo" />
+        <p class="footer-description inter-regular-22">
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop.
+        </p>
+      </div>
+      <ul class="footer-list footer-list-1 inter-regular-16">
+        <li><a href="" class="footer-link">Home</a></li>
+        <li><a href="" class="footer-link"> About Us</a></li>
+        <li><a href="" class="footer-link">Blog </a></li>
+        <li><a href="" class="footer-link"> FAQ</a></li>
+        <li><a href="" class="footer-link"> Contact Us</a></li>
+      </ul>
+      <ul class="footer-list inter-regular-16">
+        <li><a href="" class="footer-link"> Features</a></li>
+        <li><a href="" class="footer-link"> Pricing</a></li>
+        <li><a href="" class="footer-link"> Privacy Policy</a></li>
+        <li><a href="" class="footer-link">Terms of Service </a></li>
+        <li><a href="" class="footer-link"> Help Center</a></li>
+      </ul>
+      <div class="footer-social-icons">
+        <img src="assets/icon-linkedin.png" alt="" /><img
+          src="assets/icon-twitter.png"
+          alt=""
+        /><img src="assets/icon-facebook.png" alt="" /><img
+          src="assets/icon-youtube.png"
+          alt=""
+        />
+      </div>
+    </footer>
   </body>
 </html>
