--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 src="assets/shopping-cart.png"
                 alt="cart icon"
               />
-              <h5 class="inter-regular-16">Cart ($56)</h5></a
-            >
+              <p class="inter-regular-16">Cart ($56)</p>
+            </a>
           </li>
         </ul>
       </nav>
@@ -73,7 +73,7 @@
           <div class="plant-card">
             <img
               src="assets/sample-flower-image.png"
-              alt=""
+              alt="Lily Blossom flower"
               class="plant-card-img"
             />
             <div class="plant-card-text">
@@ -87,7 +87,7 @@
           <div class="plant-card">
             <img
               src="assets/sample-flower-image.png"
-              alt=""
+              alt="Lily Blossom flower"
               class="plant-card-img"
             />
             <div class="plant-card-text">
@@ -100,7 +100,7 @@
           <div class="plant-card">
             <img
               src="assets/sample-flower-image.png"
-              alt=""
+              alt="Lily Blossom flower"
               class="plant-card-img"
             />
             <div class="plant-card-text">
@@ -113,7 +113,7 @@
           <div class="plant-card">
             <img
               src="assets/sample-flower-image.png"
-              alt=""
+              alt="Lily Blossom flower"
               class="plant-card-img"
             />
             <div class="plant-card-text">
@@ -126,7 +126,7 @@
           <div class="plant-card">
             <img
               src="assets/sample-flower-image.png"
-              alt=""
+              alt="Lily Blossom flower"
               class="plant-card-img"
             />
             <div class="plant-card-text">
@@ -139,7 +139,7 @@
           <div class="plant-card">
             <img
               src="assets/sample-flower-image.png"
-              alt=""
+              alt="Lily Blossom flower"
               class="plant-card-img"
             />
             <div class="plant-card-text">
@@ -152,7 +152,7 @@
           <div class="plant-card">
             <img
               src="assets/sample-flower-image.png"
-              alt=""
+              alt="Lily Blossom flower"
               class="plant-card-img"
             />
             <div class="plant-card-text">
@@ -165,7 +165,8 @@
           <div class="plant-card">
             <img
               src="assets/sample-flower-image.png"
-              alt=""
+              alt="Lily Blossom flower"
+
               class="plant-card-img"
             />
             <div class="plant-card-text">
@@ -215,7 +216,7 @@
         </div>
       </section>
 
-      <section class="latest-deal">
+      <section class="latest-deal mt-0">
         <div class="latest-deal-text">
           <h2 class="latest-deal-title noto-serif-bold-50">
             <span class="red-banner-title">Latest</span> Deals
@@ -262,9 +263,9 @@
         </p>
       </div>
       <ul class="footer-list footer-list-1 inter-regular-16">
-        <li><a href="" class="footer-link">Home</a></li>
+        <li><a href="" class="footer-link"> Home</a></li>
         <li><a href="" class="footer-link"> About Us</a></li>
-        <li><a href="" class="footer-link">Blog </a></li>
+        <li><a href="" class="footer-link"> Blog </a></li>
         <li><a href="" class="footer-link"> FAQ</a></li>
         <li><a href="" class="footer-link"> Contact Us</a></li>
       </ul>
