--- a/index.html
+++ b/index.html
@@ -287,4 +287,13 @@
       </div>
     </footer>
   </body>
+  <script>
+  const buttons = document.querySelectorAll(".btn-plant");
+  buttons.forEach((btn) =>
+    btn.addEventListener("click", () => {
+      alert("Flower Added to Cart");
+    })
+  );
+</script>
+
 </html>
